# reverse-family-feud

./: .gitignore  API_REFERENCE.md  IMPLEMENTATION.md  QUICK_START.md  README.md  REQUIREMENTS.md  fix_admin.js  fix_admin_cats.js  fix_admin_crash.js  fix_adminpanel.js  fix_adminpanel_css.js  fix_answerviewer.js  fix_api.js  fix_categories.js  fix_players.js  fix_playerview.js  fix_playerview_buttons.js  fix_playerview_color.js  fix_playerview_html.js  fix_websocket.js  fix_ws.js  main.py  pyproject.toml  start.bat  start.sh
backend/: .env.example  run.py
backend/app/: __init__.py  config.py  main.py  services.py  services_old.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: answers.py  categories.py  categories_old.py  games.py  players.py  websocket.py  websocket_old.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: AdminPanel.css  AdminPanel.jsx  AnswerViewerPanel.css  AnswerViewerPanel.jsx  CreateGameModal.jsx  JoinGameModal.jsx  Modal.css  PlayerView.css  PlayerView.jsx  RoleSelectionPanel.css  RoleSelectionPanel.jsx
frontend/src/pages/: GameContainer.css  GameContainer.jsx  Landing.css  Landing.jsx
frontend/src/styles/: theme.css
frontend/src/utils/: api.js  constants.js
