[project]
name = "eid-game"
version = "0.1.0"
description = "A competitive game platform with ranking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.0",
]
